# teacore

./: .gitignore  README.md  pyproject.toml
teacore/: admin.py  apps.py  context.py  extras.py  forms.py  models.py  sitemaps.py  tests.py  urls.py  views.py
teacore/assets/: countryinfo.py
teacore/customtags/: breadcrumbs.py  filters.py  markdown.py  pagination.py  selectors.py  social.py  tags.py  widget.py
teacore/management/commands/: createadmin.py
teacore/middleware/: HtmxRedirectMiddleware.py  LanguageCookieMiddleware.py  ThemeCookieMiddleware.py
teacore/migrations/: 0001_initial.py
teacore/templates/: concent.html  footer.html  header.html  html.html  hx-boosted.html  info.html  mail.html  toast.html
teacore/templates/admin/: base.html  media-manager.html
teacore/templates/teacore/: form.html
teacore/templates/teacore/customtags/: addcalendar.html  breadcrumbs.html  mdfile.html  mdread.html  pagination.html  selector-lang.html  selector-theme.html  social-links.html  social-share.html  timezoneblock.html  whatsapp.html  widget.html
teacore/track/: MetaAPI.py  TrackAPI.py  TrackEvents.py
teappot_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
